@@ -69,6 +69,7 @@ Version 1.3-svn:
      * client now tells the server if a game ended in victory or defeat
      * configurable castle size for random map generator (patch #598, FR #3232)
      * team names translation now supported
+     * sped up the lobby, the lag is much lower now (patch #676 and patch #677)
    * scenarios
      * scenarios can set faction, recruit, leader, and some other initial
        settings previously ignored in multiplayer
